snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-all.jar.sha1
03810a463b8e6a6d134d9d0441614c0fdfbe387d